src/layouts/header.scss
@import '../utils/_mixins.scss';
@import '../utils/_theme.scss';


.header {
  width: 100%;
  text-align: center;
  &-tagline {
    display: block;
    font-family: Montserrat, Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    font-weight: normal;
    font-style: normal;
    color: $color-light;
    font-size: 0.625rem;
    letter-spacing: 2px;
    padding: 0.75rem;
  }
  &-nav {
    padding: .625rem 0;
    ul {
      list-style: none;
      margin: 0;
      padding: 0;
    }

    li {
      padding: 0 .625rem;

      a {
        display: inline-block;
        transition: all .2s ease-in-out;
        padding: .625rem 0;
        text-decoration: none;
        text-transform: uppercase;
        letter-spacing: 2px;
        font-weight: normal;
        font-style: normal;
        line-height: 1.125rem;
        font-size: 0.875rem;
        color: $color-dark;

        &.active,
        &:hover {
          border-color: $color-accent;
        }

      }
    }

    @include breakpoint(sm) {
      li {
        display: inline;

        a {
          transition: all .2s ease-in-out;
          padding: .625rem 0;
          text-decoration: none;
          text-transform: uppercase;
          letter-spacing: 2px;
          font-weight: normal;
          font-style: normal;
          line-height: 1.125rem;
          font-size: 0.875rem;
          border-bottom: 2px solid transparent;

          &:hover {
            border-color: $color-accent;
          }
        }
      }
    }
  }
}

